--- a/AsynMultiTaskModel.ipynb
+++ b/AsynMultiTaskModel.ipynb
@@ -13,24 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Study\\Dialogue_systems\\env\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,80 +262,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[1 / 30] Train: Loss = 2.51548, Accuracy = 71.15%: 100%|██████████| 140/140 [00:02<00:00, 68.13it/s]\n",
-      "[1 / 30]   Val: Loss = 1.37947, Accuracy = 83.89%: 100%|██████████| 4/4 [00:00<00:00, 61.57it/s]\n",
-      "[2 / 30] Train: Loss = 0.96268, Accuracy = 88.60%: 100%|██████████| 140/140 [00:01<00:00, 71.58it/s]\n",
-      "[2 / 30]   Val: Loss = 0.80399, Accuracy = 91.57%: 100%|██████████| 4/4 [00:00<00:00, 72.73it/s]\n",
-      "[3 / 30] Train: Loss = 0.61995, Accuracy = 92.77%: 100%|██████████| 140/140 [00:02<00:00, 62.11it/s]\n",
-      "[3 / 30]   Val: Loss = 0.54088, Accuracy = 94.08%: 100%|██████████| 4/4 [00:00<00:00, 80.00it/s]\n",
-      "[4 / 30] Train: Loss = 0.44812, Accuracy = 94.83%: 100%|██████████| 140/140 [00:01<00:00, 73.26it/s]\n",
-      "[4 / 30]   Val: Loss = 0.44436, Accuracy = 95.31%: 100%|██████████| 4/4 [00:00<00:00, 78.43it/s]\n",
-      "[5 / 30] Train: Loss = 0.33808, Accuracy = 96.01%: 100%|██████████| 140/140 [00:01<00:00, 73.11it/s]\n",
-      "[5 / 30]   Val: Loss = 0.34727, Accuracy = 96.26%: 100%|██████████| 4/4 [00:00<00:00, 81.63it/s]\n",
-      "[6 / 30] Train: Loss = 0.27669, Accuracy = 96.75%: 100%|██████████| 140/140 [00:01<00:00, 74.96it/s]\n",
-      "[6 / 30]   Val: Loss = 0.31006, Accuracy = 96.94%: 100%|██████████| 4/4 [00:00<00:00, 76.89it/s]\n",
-      "[7 / 30] Train: Loss = 0.21815, Accuracy = 97.34%: 100%|██████████| 140/140 [00:01<00:00, 73.45it/s]\n",
-      "[7 / 30]   Val: Loss = 0.27113, Accuracy = 97.32%: 100%|██████████| 4/4 [00:00<00:00, 72.73it/s]\n",
-      "[8 / 30] Train: Loss = 0.18382, Accuracy = 97.76%: 100%|██████████| 140/140 [00:01<00:00, 72.95it/s]\n",
-      "[8 / 30]   Val: Loss = 0.23595, Accuracy = 97.60%: 100%|██████████| 4/4 [00:00<00:00, 74.95it/s]\n",
-      "[9 / 30] Train: Loss = 0.15175, Accuracy = 98.13%: 100%|██████████| 140/140 [00:01<00:00, 73.14it/s]\n",
-      "[9 / 30]   Val: Loss = 0.23731, Accuracy = 97.71%: 100%|██████████| 4/4 [00:00<00:00, 76.92it/s]\n",
-      "[10 / 30] Train: Loss = 0.13047, Accuracy = 98.35%: 100%|██████████| 140/140 [00:01<00:00, 74.85it/s]\n",
-      "[10 / 30]   Val: Loss = 0.26692, Accuracy = 97.89%: 100%|██████████| 4/4 [00:00<00:00, 76.92it/s]\n",
-      "[11 / 30] Train: Loss = 0.10461, Accuracy = 98.55%: 100%|██████████| 140/140 [00:01<00:00, 74.31it/s]\n",
-      "[11 / 30]   Val: Loss = 0.20635, Accuracy = 97.97%: 100%|██████████| 4/4 [00:00<00:00, 62.50it/s]\n",
-      "[12 / 30] Train: Loss = 0.09864, Accuracy = 98.65%: 100%|██████████| 140/140 [00:01<00:00, 73.75it/s]\n",
-      "[12 / 30]   Val: Loss = 0.20466, Accuracy = 98.10%: 100%|██████████| 4/4 [00:00<00:00, 63.49it/s]\n",
-      "[13 / 30] Train: Loss = 0.08350, Accuracy = 98.84%: 100%|██████████| 140/140 [00:01<00:00, 76.55it/s]\n",
-      "[13 / 30]   Val: Loss = 0.19746, Accuracy = 98.24%: 100%|██████████| 4/4 [00:00<00:00, 66.67it/s]\n",
-      "[14 / 30] Train: Loss = 0.06952, Accuracy = 99.02%: 100%|██████████| 140/140 [00:01<00:00, 75.19it/s]\n",
-      "[14 / 30]   Val: Loss = 0.20209, Accuracy = 98.47%: 100%|██████████| 4/4 [00:00<00:00, 71.43it/s]\n",
-      "[15 / 30] Train: Loss = 0.05609, Accuracy = 99.13%: 100%|██████████| 140/140 [00:01<00:00, 75.80it/s]\n",
-      "[15 / 30]   Val: Loss = 0.18244, Accuracy = 98.45%: 100%|██████████| 4/4 [00:00<00:00, 67.83it/s]\n",
-      "[16 / 30] Train: Loss = 0.05398, Accuracy = 99.20%: 100%|██████████| 140/140 [00:01<00:00, 75.27it/s]\n",
-      "[16 / 30]   Val: Loss = 0.17237, Accuracy = 98.48%: 100%|██████████| 4/4 [00:00<00:00, 64.49it/s]\n",
-      "[17 / 30] Train: Loss = 0.04778, Accuracy = 99.25%: 100%|██████████| 140/140 [00:01<00:00, 74.37it/s]\n",
-      "[17 / 30]   Val: Loss = 0.18024, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 72.69it/s]\n",
-      "[18 / 30] Train: Loss = 0.04833, Accuracy = 99.34%: 100%|██████████| 140/140 [00:01<00:00, 75.31it/s]\n",
-      "[18 / 30]   Val: Loss = 0.17740, Accuracy = 98.61%: 100%|██████████| 4/4 [00:00<00:00, 71.43it/s]\n",
-      "[19 / 30] Train: Loss = 0.04179, Accuracy = 99.40%: 100%|██████████| 140/140 [00:01<00:00, 75.19it/s]\n",
-      "[19 / 30]   Val: Loss = 0.16352, Accuracy = 98.61%: 100%|██████████| 4/4 [00:00<00:00, 54.80it/s]\n",
-      "[20 / 30] Train: Loss = 0.03488, Accuracy = 99.46%: 100%|██████████| 140/140 [00:01<00:00, 71.25it/s]\n",
-      "[20 / 30]   Val: Loss = 0.16707, Accuracy = 98.65%: 100%|██████████| 4/4 [00:00<00:00, 59.70it/s]\n",
-      "[21 / 30] Train: Loss = 0.03242, Accuracy = 99.54%: 100%|██████████| 140/140 [00:01<00:00, 72.58it/s]\n",
-      "[21 / 30]   Val: Loss = 0.15838, Accuracy = 98.68%: 100%|██████████| 4/4 [00:00<00:00, 53.33it/s]\n",
-      "[22 / 30] Train: Loss = 0.03202, Accuracy = 99.56%: 100%|██████████| 140/140 [00:02<00:00, 49.91it/s]\n",
-      "[22 / 30]   Val: Loss = 0.20560, Accuracy = 98.58%: 100%|██████████| 4/4 [00:00<00:00, 40.83it/s]\n",
-      "[23 / 30] Train: Loss = 0.03181, Accuracy = 99.57%: 100%|██████████| 140/140 [00:02<00:00, 50.74it/s]\n",
-      "[23 / 30]   Val: Loss = 0.17049, Accuracy = 98.74%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
-      "[24 / 30] Train: Loss = 0.02395, Accuracy = 99.63%: 100%|██████████| 140/140 [00:02<00:00, 49.73it/s]\n",
-      "[24 / 30]   Val: Loss = 0.19127, Accuracy = 98.65%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
-      "[25 / 30] Train: Loss = 0.02549, Accuracy = 99.61%: 100%|██████████| 140/140 [00:02<00:00, 50.21it/s]\n",
-      "[25 / 30]   Val: Loss = 0.21197, Accuracy = 98.73%: 100%|██████████| 4/4 [00:00<00:00, 41.66it/s]\n",
-      "[26 / 30] Train: Loss = 0.02002, Accuracy = 99.68%: 100%|██████████| 140/140 [00:02<00:00, 50.80it/s]\n",
-      "[26 / 30]   Val: Loss = 0.17884, Accuracy = 98.81%: 100%|██████████| 4/4 [00:00<00:00, 34.48it/s]\n",
-      "[27 / 30] Train: Loss = 0.01847, Accuracy = 99.71%: 100%|██████████| 140/140 [00:02<00:00, 50.69it/s]\n",
-      "[27 / 30]   Val: Loss = 0.19138, Accuracy = 98.71%: 100%|██████████| 4/4 [00:00<00:00, 39.60it/s]\n",
-      "[28 / 30] Train: Loss = 0.02018, Accuracy = 99.76%: 100%|██████████| 140/140 [00:02<00:00, 50.20it/s]\n",
-      "[28 / 30]   Val: Loss = 0.20237, Accuracy = 98.82%: 100%|██████████| 4/4 [00:00<00:00, 39.99it/s]\n",
-      "[29 / 30] Train: Loss = 0.01945, Accuracy = 99.75%: 100%|██████████| 140/140 [00:02<00:00, 50.31it/s]\n",
-      "[29 / 30]   Val: Loss = 0.18621, Accuracy = 98.81%: 100%|██████████| 4/4 [00:00<00:00, 40.81it/s]\n",
-      "[30 / 30] Train: Loss = 0.02318, Accuracy = 99.70%: 100%|██████████| 140/140 [00:02<00:00, 50.32it/s]\n",
-      "[30 / 30]   Val: Loss = 0.21456, Accuracy = 98.61%: 100%|██████████| 4/4 [00:00<00:00, 40.82it/s]\n"
+      "[1 / 30] Train: Loss = 2.66810, Accuracy = 70.12%: 100%|██████████| 140/140 [00:02<00:00, 69.65it/s]\n",
+      "[1 / 30]   Val: Loss = 1.44941, Accuracy = 83.52%: 100%|██████████| 4/4 [00:00<00:00, 61.54it/s]\n",
+      "[2 / 30] Train: Loss = 0.99398, Accuracy = 88.34%: 100%|██████████| 140/140 [00:01<00:00, 77.65it/s]\n",
+      "[2 / 30]   Val: Loss = 0.82354, Accuracy = 91.05%: 100%|██████████| 4/4 [00:00<00:00, 75.47it/s]\n",
+      "[3 / 30] Train: Loss = 0.62603, Accuracy = 92.79%: 100%|██████████| 140/140 [00:02<00:00, 65.03it/s]\n",
+      "[3 / 30]   Val: Loss = 0.54641, Accuracy = 93.97%: 100%|██████████| 4/4 [00:00<00:00, 37.74it/s]\n",
+      "[4 / 30] Train: Loss = 0.45622, Accuracy = 94.72%: 100%|██████████| 140/140 [00:02<00:00, 50.16it/s]\n",
+      "[4 / 30]   Val: Loss = 0.45780, Accuracy = 95.23%: 100%|██████████| 4/4 [00:00<00:00, 36.04it/s]\n",
+      "[5 / 30] Train: Loss = 0.33751, Accuracy = 96.07%: 100%|██████████| 140/140 [00:02<00:00, 50.78it/s]\n",
+      "[5 / 30]   Val: Loss = 0.35902, Accuracy = 96.15%: 100%|██████████| 4/4 [00:00<00:00, 40.40it/s]\n",
+      "[6 / 30] Train: Loss = 0.27457, Accuracy = 96.82%: 100%|██████████| 140/140 [00:02<00:00, 50.36it/s]\n",
+      "[6 / 30]   Val: Loss = 0.30190, Accuracy = 96.95%: 100%|██████████| 4/4 [00:00<00:00, 38.83it/s]\n",
+      "[7 / 30] Train: Loss = 0.21914, Accuracy = 97.43%: 100%|██████████| 140/140 [00:02<00:00, 51.00it/s]\n",
+      "[7 / 30]   Val: Loss = 0.26012, Accuracy = 97.26%: 100%|██████████| 4/4 [00:00<00:00, 38.83it/s]\n",
+      "[8 / 30] Train: Loss = 0.18048, Accuracy = 97.80%: 100%|██████████| 140/140 [00:02<00:00, 51.70it/s]\n",
+      "[8 / 30]   Val: Loss = 0.24072, Accuracy = 97.66%: 100%|██████████| 4/4 [00:00<00:00, 38.46it/s]\n",
+      "[9 / 30] Train: Loss = 0.15273, Accuracy = 98.21%: 100%|██████████| 140/140 [00:02<00:00, 51.66it/s]\n",
+      "[9 / 30]   Val: Loss = 0.23398, Accuracy = 97.79%: 100%|██████████| 4/4 [00:00<00:00, 40.82it/s]\n",
+      "[10 / 30] Train: Loss = 0.12396, Accuracy = 98.43%: 100%|██████████| 140/140 [00:02<00:00, 51.30it/s]\n",
+      "[10 / 30]   Val: Loss = 0.23850, Accuracy = 97.97%: 100%|██████████| 4/4 [00:00<00:00, 40.82it/s]\n",
+      "[11 / 30] Train: Loss = 0.10115, Accuracy = 98.62%: 100%|██████████| 140/140 [00:02<00:00, 51.66it/s]\n",
+      "[11 / 30]   Val: Loss = 0.23006, Accuracy = 98.03%: 100%|██████████| 4/4 [00:00<00:00, 37.74it/s]\n",
+      "[12 / 30] Train: Loss = 0.09161, Accuracy = 98.78%: 100%|██████████| 140/140 [00:02<00:00, 51.49it/s]\n",
+      "[12 / 30]   Val: Loss = 0.20631, Accuracy = 98.10%: 100%|██████████| 4/4 [00:00<00:00, 38.83it/s]\n",
+      "[13 / 30] Train: Loss = 0.07354, Accuracy = 98.95%: 100%|██████████| 140/140 [00:02<00:00, 51.28it/s]\n",
+      "[13 / 30]   Val: Loss = 0.19534, Accuracy = 98.16%: 100%|██████████| 4/4 [00:00<00:00, 38.46it/s]\n",
+      "[14 / 30] Train: Loss = 0.07424, Accuracy = 99.05%: 100%|██████████| 140/140 [00:02<00:00, 50.96it/s]\n",
+      "[14 / 30]   Val: Loss = 0.21167, Accuracy = 98.21%: 100%|██████████| 4/4 [00:00<00:00, 40.40it/s]\n",
+      "[15 / 30] Train: Loss = 0.06242, Accuracy = 99.13%: 100%|██████████| 140/140 [00:02<00:00, 50.17it/s]\n",
+      "[15 / 30]   Val: Loss = 0.19613, Accuracy = 98.26%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
+      "[16 / 30] Train: Loss = 0.04891, Accuracy = 99.26%: 100%|██████████| 140/140 [00:02<00:00, 50.36it/s]\n",
+      "[16 / 30]   Val: Loss = 0.18391, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 36.70it/s]\n",
+      "[17 / 30] Train: Loss = 0.04636, Accuracy = 99.33%: 100%|██████████| 140/140 [00:02<00:00, 50.71it/s]\n",
+      "[17 / 30]   Val: Loss = 0.19624, Accuracy = 98.47%: 100%|██████████| 4/4 [00:00<00:00, 38.47it/s]\n",
+      "[18 / 30] Train: Loss = 0.03976, Accuracy = 99.33%: 100%|██████████| 140/140 [00:02<00:00, 50.68it/s]\n",
+      "[18 / 30]   Val: Loss = 0.20595, Accuracy = 98.48%: 100%|██████████| 4/4 [00:00<00:00, 39.22it/s]\n",
+      "[19 / 30] Train: Loss = 0.04075, Accuracy = 99.47%: 100%|██████████| 140/140 [00:02<00:00, 50.83it/s]\n",
+      "[19 / 30]   Val: Loss = 0.20040, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 37.04it/s]\n",
+      "[20 / 30] Train: Loss = 0.03471, Accuracy = 99.48%: 100%|██████████| 140/140 [00:02<00:00, 51.00it/s]\n",
+      "[20 / 30]   Val: Loss = 0.18700, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 39.60it/s]\n",
+      "[21 / 30] Train: Loss = 0.03711, Accuracy = 99.56%: 100%|██████████| 140/140 [00:02<00:00, 50.52it/s]\n",
+      "[21 / 30]   Val: Loss = 0.23224, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
+      "[22 / 30] Train: Loss = 0.02804, Accuracy = 99.54%: 100%|██████████| 140/140 [00:02<00:00, 51.26it/s]\n",
+      "[22 / 30]   Val: Loss = 0.19084, Accuracy = 98.55%: 100%|██████████| 4/4 [00:00<00:00, 42.09it/s]\n",
+      "[23 / 30] Train: Loss = 0.02749, Accuracy = 99.58%: 100%|██████████| 140/140 [00:02<00:00, 51.21it/s]\n",
+      "[23 / 30]   Val: Loss = 0.20467, Accuracy = 98.48%: 100%|██████████| 4/4 [00:00<00:00, 41.68it/s]\n",
+      "[24 / 30] Train: Loss = 0.02517, Accuracy = 99.63%: 100%|██████████| 140/140 [00:02<00:00, 51.17it/s]\n",
+      "[24 / 30]   Val: Loss = 0.19681, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 40.01it/s]\n",
+      "[25 / 30] Train: Loss = 0.02337, Accuracy = 99.62%: 100%|██████████| 140/140 [00:02<00:00, 50.95it/s]\n",
+      "[25 / 30]   Val: Loss = 0.21977, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 40.40it/s]\n",
+      "[26 / 30] Train: Loss = 0.02120, Accuracy = 99.69%: 100%|██████████| 140/140 [00:02<00:00, 51.09it/s]\n",
+      "[26 / 30]   Val: Loss = 0.21327, Accuracy = 98.56%: 100%|██████████| 4/4 [00:00<00:00, 37.38it/s]\n",
+      "[27 / 30] Train: Loss = 0.01730, Accuracy = 99.73%: 100%|██████████| 140/140 [00:02<00:00, 50.65it/s]\n",
+      "[27 / 30]   Val: Loss = 0.22079, Accuracy = 98.40%: 100%|██████████| 4/4 [00:00<00:00, 39.61it/s]\n",
+      "[28 / 30] Train: Loss = 0.02191, Accuracy = 99.73%: 100%|██████████| 140/140 [00:02<00:00, 50.91it/s]\n",
+      "[28 / 30]   Val: Loss = 0.21193, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 40.82it/s]\n",
+      "[29 / 30] Train: Loss = 0.01779, Accuracy = 99.75%: 100%|██████████| 140/140 [00:02<00:00, 51.06it/s]\n",
+      "[29 / 30]   Val: Loss = 0.20864, Accuracy = 98.68%: 100%|██████████| 4/4 [00:00<00:00, 41.68it/s]\n",
+      "[30 / 30] Train: Loss = 0.01682, Accuracy = 99.76%: 100%|██████████| 140/140 [00:02<00:00, 50.11it/s]\n",
+      "[30 / 30]   Val: Loss = 0.20818, Accuracy = 98.71%: 100%|██████████| 4/4 [00:00<00:00, 41.65it/s]\n"
      ]
     }
    ],
    "source": [
-    "pad_idx = tags_field.vocab.stoi['<pad>']\n",
+    "tokens_pad_idx = tokens_field.vocab.stoi[tokens_field.pad_token]\n",
+    "tags_pad_idx = tags_field.vocab.stoi[tags_field.pad_token]\n",
     "\n",
-    "model = SharedModel(vocab_size=len(tokens_field.vocab), intents_count=len(intent_field.vocab), tags_count=len(tags_field.vocab), pad_idx = pad_idx).to(DEVICE)\n",
+    "model = SharedModel(vocab_size=len(tokens_field.vocab), intents_count=len(intent_field.vocab), tags_count=len(tags_field.vocab), pad_idx = tokens_pad_idx).to(DEVICE)\n",
     "\n",
     "tags_parameters = [param for name, param in model.named_parameters() if not name.startswith('_intent')]\n",
     "intent_parameters = [param for name, param in model.named_parameters() if not name.startswith('_tags')]\n",
@@ -352,26 +345,26 @@
     "# print(len(tags_parameters))\n",
     "# print(len(intent_parameters))\n",
     "\n",
-    "criterion_ignore_pad = nn.CrossEntropyLoss(ignore_index=pad_idx).to(DEVICE)\n",
+    "criterion_ignore_pad = nn.CrossEntropyLoss(ignore_index=tags_pad_idx).to(DEVICE)\n",
     "criterion = nn.CrossEntropyLoss().to(DEVICE)\n",
     "optimizer_tags = optim.Adam(tags_parameters)\n",
     "optimizer_intent = optim.Adam(intent_parameters)\n",
     "\n",
-    "trainer = ModelTrainer_Trigger(model, criterion, criterion_ignore_pad, optimizer_tags, optimizer_intent, pad_idx)\n",
+    "trainer = ModelTrainer_Trigger(model, criterion, criterion_ignore_pad, optimizer_tags, optimizer_intent, tags_pad_idx)\n",
     "\n",
     "fit(trainer, train_iter, epochs_count=30, val_iter=val_iter)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Test: Loss = 0.35380, Accuracy = 97.65%: 100%|██████████| 7/7 [00:00<00:00, 42.42it/s]\n"
+      "Test: Loss = 0.36012, Accuracy = 97.69%: 100%|██████████| 7/7 [00:00<00:00, 45.46it/s]\n"
      ]
     }
    ],
@@ -383,15 +376,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision = 95.70%, Recall = 94.84%, F1 = 95.27%\n",
-      "Intent accuracy = 96.64%%\n"
+      "Precision = 94.83%, Recall = 93.95%, F1 = 94.39%\n",
+      "Intent accuracy = 96.53%%\n"
      ]
     }
    ],
@@ -399,7 +392,7 @@
     "from conlleval import evaluate\n",
     "\n",
     "def eval_tagger(model, test_iter):\n",
-    "    pad_idx = tags_field.vocab.stoi['<pad>']\n",
+    "    pad_idx = tags_field.vocab.stoi[tags_field.pad_token]\n",
     "    true_seqs, pred_seqs = [], []\n",
     "    correct_count, total_count = 0, 0\n",
     "\n",
