--- a/MultiTaskModel.ipynb
+++ b/MultiTaskModel.ipynb
@@ -262,79 +262,80 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[1 / 30] Train: Loss = 2.81305, Accuracy = 69.05%: 100%|██████████| 140/140 [00:01<00:00, 92.96it/s] \n",
-      "[1 / 30]   Val: Loss = 1.68897, Accuracy = 81.99%: 100%|██████████| 4/4 [00:00<00:00, 72.73it/s]\n",
-      "[2 / 30] Train: Loss = 1.27937, Accuracy = 86.53%: 100%|██████████| 140/140 [00:01<00:00, 99.22it/s]\n",
-      "[2 / 30]   Val: Loss = 1.07611, Accuracy = 89.84%: 100%|██████████| 4/4 [00:00<00:00, 102.56it/s]\n",
-      "[3 / 30] Train: Loss = 0.85654, Accuracy = 91.29%: 100%|██████████| 140/140 [00:01<00:00, 104.87it/s]\n",
-      "[3 / 30]   Val: Loss = 0.77768, Accuracy = 92.94%: 100%|██████████| 4/4 [00:00<00:00, 105.26it/s]\n",
-      "[4 / 30] Train: Loss = 0.64251, Accuracy = 93.42%: 100%|██████████| 140/140 [00:01<00:00, 89.57it/s]\n",
-      "[4 / 30]   Val: Loss = 0.62181, Accuracy = 94.42%: 100%|██████████| 4/4 [00:00<00:00, 59.68it/s]\n",
-      "[5 / 30] Train: Loss = 0.50440, Accuracy = 94.87%: 100%|██████████| 140/140 [00:01<00:00, 83.29it/s]\n",
-      "[5 / 30]   Val: Loss = 0.51221, Accuracy = 95.36%: 100%|██████████| 4/4 [00:00<00:00, 60.60it/s]\n",
-      "[6 / 30] Train: Loss = 0.42630, Accuracy = 95.78%: 100%|██████████| 140/140 [00:01<00:00, 82.02it/s]\n",
-      "[6 / 30]   Val: Loss = 0.44562, Accuracy = 96.08%: 100%|██████████| 4/4 [00:00<00:00, 47.06it/s]\n",
-      "[7 / 30] Train: Loss = 0.35790, Accuracy = 96.38%: 100%|██████████| 140/140 [00:01<00:00, 82.99it/s]\n",
-      "[7 / 30]   Val: Loss = 0.38876, Accuracy = 96.29%: 100%|██████████| 4/4 [00:00<00:00, 61.54it/s]\n",
-      "[8 / 30] Train: Loss = 0.29848, Accuracy = 96.91%: 100%|██████████| 140/140 [00:01<00:00, 82.06it/s]\n",
-      "[8 / 30]   Val: Loss = 0.34393, Accuracy = 96.78%: 100%|██████████| 4/4 [00:00<00:00, 63.49it/s]\n",
-      "[9 / 30] Train: Loss = 0.25901, Accuracy = 97.26%: 100%|██████████| 140/140 [00:01<00:00, 82.65it/s]\n",
-      "[9 / 30]   Val: Loss = 0.32362, Accuracy = 97.10%: 100%|██████████| 4/4 [00:00<00:00, 61.54it/s]\n",
-      "[10 / 30] Train: Loss = 0.22364, Accuracy = 97.58%: 100%|██████████| 140/140 [00:01<00:00, 80.55it/s]\n",
-      "[10 / 30]   Val: Loss = 0.28728, Accuracy = 97.36%: 100%|██████████| 4/4 [00:00<00:00, 59.68it/s]\n",
-      "[11 / 30] Train: Loss = 0.19081, Accuracy = 97.91%: 100%|██████████| 140/140 [00:01<00:00, 81.87it/s]\n",
-      "[11 / 30]   Val: Loss = 0.28838, Accuracy = 97.60%: 100%|██████████| 4/4 [00:00<00:00, 66.67it/s]\n",
-      "[12 / 30] Train: Loss = 0.17845, Accuracy = 97.98%: 100%|██████████| 140/140 [00:01<00:00, 81.87it/s]\n",
-      "[12 / 30]   Val: Loss = 0.25656, Accuracy = 97.65%: 100%|██████████| 4/4 [00:00<00:00, 60.61it/s]\n",
-      "[13 / 30] Train: Loss = 0.15097, Accuracy = 98.25%: 100%|██████████| 140/140 [00:01<00:00, 83.23it/s]\n",
-      "[13 / 30]   Val: Loss = 0.25886, Accuracy = 97.74%: 100%|██████████| 4/4 [00:00<00:00, 66.63it/s]\n",
-      "[14 / 30] Train: Loss = 0.13363, Accuracy = 98.38%: 100%|██████████| 140/140 [00:01<00:00, 80.92it/s]\n",
-      "[14 / 30]   Val: Loss = 0.23710, Accuracy = 97.82%: 100%|██████████| 4/4 [00:00<00:00, 61.51it/s]\n",
-      "[15 / 30] Train: Loss = 0.12282, Accuracy = 98.48%: 100%|██████████| 140/140 [00:01<00:00, 82.94it/s]\n",
-      "[15 / 30]   Val: Loss = 0.22712, Accuracy = 97.97%: 100%|██████████| 4/4 [00:00<00:00, 62.47it/s]\n",
-      "[16 / 30] Train: Loss = 0.09986, Accuracy = 98.60%: 100%|██████████| 140/140 [00:01<00:00, 82.02it/s]\n",
-      "[16 / 30]   Val: Loss = 0.22006, Accuracy = 97.92%: 100%|██████████| 4/4 [00:00<00:00, 57.97it/s]\n",
-      "[17 / 30] Train: Loss = 0.09516, Accuracy = 98.73%: 100%|██████████| 140/140 [00:01<00:00, 80.28it/s]\n",
-      "[17 / 30]   Val: Loss = 0.23585, Accuracy = 97.89%: 100%|██████████| 4/4 [00:00<00:00, 63.49it/s]\n",
-      "[18 / 30] Train: Loss = 0.08610, Accuracy = 98.86%: 100%|██████████| 140/140 [00:01<00:00, 82.89it/s]\n",
-      "[18 / 30]   Val: Loss = 0.21747, Accuracy = 98.16%: 100%|██████████| 4/4 [00:00<00:00, 60.61it/s]\n",
-      "[19 / 30] Train: Loss = 0.07279, Accuracy = 98.94%: 100%|██████████| 140/140 [00:01<00:00, 82.26it/s]\n",
-      "[19 / 30]   Val: Loss = 0.22274, Accuracy = 98.16%: 100%|██████████| 4/4 [00:00<00:00, 63.49it/s]\n",
-      "[20 / 30] Train: Loss = 0.07383, Accuracy = 98.88%: 100%|██████████| 140/140 [00:01<00:00, 79.50it/s]\n",
-      "[20 / 30]   Val: Loss = 0.28792, Accuracy = 98.03%: 100%|██████████| 4/4 [00:00<00:00, 65.61it/s]\n",
-      "[21 / 30] Train: Loss = 0.06892, Accuracy = 99.06%: 100%|██████████| 140/140 [00:01<00:00, 80.92it/s]\n",
-      "[21 / 30]   Val: Loss = 0.19159, Accuracy = 98.18%: 100%|██████████| 4/4 [00:00<00:00, 57.97it/s]\n",
-      "[22 / 30] Train: Loss = 0.05650, Accuracy = 99.20%: 100%|██████████| 140/140 [00:01<00:00, 81.11it/s]\n",
-      "[22 / 30]   Val: Loss = 0.20165, Accuracy = 98.32%: 100%|██████████| 4/4 [00:00<00:00, 66.67it/s]\n",
-      "[23 / 30] Train: Loss = 0.05168, Accuracy = 99.20%: 100%|██████████| 140/140 [00:01<00:00, 77.43it/s]\n",
-      "[23 / 30]   Val: Loss = 0.19344, Accuracy = 98.31%: 100%|██████████| 4/4 [00:00<00:00, 67.80it/s]\n",
-      "[24 / 30] Train: Loss = 0.04335, Accuracy = 99.24%: 100%|██████████| 140/140 [00:01<00:00, 78.12it/s]\n",
-      "[24 / 30]   Val: Loss = 0.19186, Accuracy = 98.24%: 100%|██████████| 4/4 [00:00<00:00, 64.52it/s]\n",
-      "[25 / 30] Train: Loss = 0.04055, Accuracy = 99.28%: 100%|██████████| 140/140 [00:01<00:00, 80.46it/s]\n",
-      "[25 / 30]   Val: Loss = 0.19957, Accuracy = 98.31%: 100%|██████████| 4/4 [00:00<00:00, 66.67it/s]\n",
-      "[26 / 30] Train: Loss = 0.03833, Accuracy = 99.33%: 100%|██████████| 140/140 [00:01<00:00, 79.37it/s]\n",
-      "[26 / 30]   Val: Loss = 0.20696, Accuracy = 98.45%: 100%|██████████| 4/4 [00:00<00:00, 57.97it/s]\n",
-      "[27 / 30] Train: Loss = 0.03755, Accuracy = 99.42%: 100%|██████████| 140/140 [00:01<00:00, 80.46it/s]\n",
-      "[27 / 30]   Val: Loss = 0.20474, Accuracy = 98.44%: 100%|██████████| 4/4 [00:00<00:00, 64.52it/s]\n",
-      "[28 / 30] Train: Loss = 0.03582, Accuracy = 99.43%: 100%|██████████| 140/140 [00:01<00:00, 80.92it/s]\n",
-      "[28 / 30]   Val: Loss = 0.19823, Accuracy = 98.52%: 100%|██████████| 4/4 [00:00<00:00, 64.52it/s]\n",
-      "[29 / 30] Train: Loss = 0.03838, Accuracy = 99.41%: 100%|██████████| 140/140 [00:01<00:00, 81.49it/s]\n",
-      "[29 / 30]   Val: Loss = 0.18864, Accuracy = 98.47%: 100%|██████████| 4/4 [00:00<00:00, 62.50it/s]\n",
-      "[30 / 30] Train: Loss = 0.03770, Accuracy = 99.41%: 100%|██████████| 140/140 [00:01<00:00, 78.52it/s]\n",
-      "[30 / 30]   Val: Loss = 0.18845, Accuracy = 98.52%: 100%|██████████| 4/4 [00:00<00:00, 45.98it/s]\n"
+      "[1 / 30] Train: Loss = 2.94032, Accuracy = 69.46%: 100%|██████████| 140/140 [00:01<00:00, 92.23it/s] \n",
+      "[1 / 30]   Val: Loss = 1.72971, Accuracy = 81.93%: 100%|██████████| 4/4 [00:00<00:00, 81.64it/s]\n",
+      "[2 / 30] Train: Loss = 1.25533, Accuracy = 86.61%: 100%|██████████| 140/140 [00:01<00:00, 101.67it/s]\n",
+      "[2 / 30]   Val: Loss = 1.04106, Accuracy = 89.49%: 100%|██████████| 4/4 [00:00<00:00, 108.11it/s]\n",
+      "[3 / 30] Train: Loss = 0.83257, Accuracy = 90.93%: 100%|██████████| 140/140 [00:01<00:00, 103.17it/s]\n",
+      "[3 / 30]   Val: Loss = 0.76675, Accuracy = 92.34%: 100%|██████████| 4/4 [00:00<00:00, 105.26it/s]\n",
+      "[4 / 30] Train: Loss = 0.62093, Accuracy = 93.11%: 100%|██████████| 140/140 [00:01<00:00, 94.59it/s]\n",
+      "[4 / 30]   Val: Loss = 0.61135, Accuracy = 94.13%: 100%|██████████| 4/4 [00:00<00:00, 59.70it/s]\n",
+      "[5 / 30] Train: Loss = 0.49609, Accuracy = 94.40%: 100%|██████████| 140/140 [00:01<00:00, 83.98it/s]\n",
+      "[5 / 30]   Val: Loss = 0.50898, Accuracy = 94.92%: 100%|██████████| 4/4 [00:00<00:00, 58.82it/s]\n",
+      "[6 / 30] Train: Loss = 0.41448, Accuracy = 95.36%: 100%|██████████| 140/140 [00:01<00:00, 81.02it/s]\n",
+      "[6 / 30]   Val: Loss = 0.45111, Accuracy = 95.60%: 100%|██████████| 4/4 [00:00<00:00, 62.50it/s]\n",
+      "[7 / 30] Train: Loss = 0.34836, Accuracy = 96.12%: 100%|██████████| 140/140 [00:01<00:00, 80.32it/s]\n",
+      "[7 / 30]   Val: Loss = 0.39305, Accuracy = 96.05%: 100%|██████████| 4/4 [00:00<00:00, 62.50it/s]\n",
+      "[8 / 30] Train: Loss = 0.29603, Accuracy = 96.61%: 100%|██████████| 140/140 [00:01<00:00, 82.99it/s]\n",
+      "[8 / 30]   Val: Loss = 0.35319, Accuracy = 96.82%: 100%|██████████| 4/4 [00:00<00:00, 55.55it/s]\n",
+      "[9 / 30] Train: Loss = 0.24825, Accuracy = 97.08%: 100%|██████████| 140/140 [00:01<00:00, 83.73it/s]\n",
+      "[9 / 30]   Val: Loss = 0.31184, Accuracy = 97.07%: 100%|██████████| 4/4 [00:00<00:00, 61.54it/s]\n",
+      "[10 / 30] Train: Loss = 0.21274, Accuracy = 97.40%: 100%|██████████| 140/140 [00:01<00:00, 83.33it/s]\n",
+      "[10 / 30]   Val: Loss = 0.30703, Accuracy = 97.32%: 100%|██████████| 4/4 [00:00<00:00, 59.70it/s]\n",
+      "[11 / 30] Train: Loss = 0.18795, Accuracy = 97.66%: 100%|██████████| 140/140 [00:01<00:00, 81.25it/s]\n",
+      "[11 / 30]   Val: Loss = 0.29825, Accuracy = 97.58%: 100%|██████████| 4/4 [00:00<00:00, 61.54it/s]\n",
+      "[12 / 30] Train: Loss = 0.17282, Accuracy = 97.79%: 100%|██████████| 140/140 [00:01<00:00, 83.38it/s]\n",
+      "[12 / 30]   Val: Loss = 0.26231, Accuracy = 97.81%: 100%|██████████| 4/4 [00:00<00:00, 46.51it/s]\n",
+      "[13 / 30] Train: Loss = 0.14426, Accuracy = 98.04%: 100%|██████████| 140/140 [00:01<00:00, 80.23it/s]\n",
+      "[13 / 30]   Val: Loss = 0.25082, Accuracy = 97.89%: 100%|██████████| 4/4 [00:00<00:00, 62.50it/s]\n",
+      "[14 / 30] Train: Loss = 0.12334, Accuracy = 98.23%: 100%|██████████| 140/140 [00:01<00:00, 82.30it/s]\n",
+      "[14 / 30]   Val: Loss = 0.23999, Accuracy = 97.92%: 100%|██████████| 4/4 [00:00<00:00, 60.61it/s]\n",
+      "[15 / 30] Train: Loss = 0.11462, Accuracy = 98.40%: 100%|██████████| 140/140 [00:01<00:00, 83.93it/s]\n",
+      "[15 / 30]   Val: Loss = 0.23003, Accuracy = 97.95%: 100%|██████████| 4/4 [00:00<00:00, 60.60it/s]\n",
+      "[16 / 30] Train: Loss = 0.11415, Accuracy = 98.46%: 100%|██████████| 140/140 [00:01<00:00, 83.33it/s]\n",
+      "[16 / 30]   Val: Loss = 0.23011, Accuracy = 98.10%: 100%|██████████| 4/4 [00:00<00:00, 63.49it/s]\n",
+      "[17 / 30] Train: Loss = 0.09188, Accuracy = 98.65%: 100%|██████████| 140/140 [00:01<00:00, 82.26it/s]\n",
+      "[17 / 30]   Val: Loss = 0.23457, Accuracy = 98.11%: 100%|██████████| 4/4 [00:00<00:00, 66.67it/s]\n",
+      "[18 / 30] Train: Loss = 0.08415, Accuracy = 98.69%: 100%|██████████| 140/140 [00:01<00:00, 82.55it/s]\n",
+      "[18 / 30]   Val: Loss = 0.22040, Accuracy = 98.27%: 100%|██████████| 4/4 [00:00<00:00, 59.70it/s]\n",
+      "[19 / 30] Train: Loss = 0.07662, Accuracy = 98.80%: 100%|██████████| 140/140 [00:01<00:00, 83.88it/s]\n",
+      "[19 / 30]   Val: Loss = 0.22707, Accuracy = 98.27%: 100%|██████████| 4/4 [00:00<00:00, 65.57it/s]\n",
+      "[20 / 30] Train: Loss = 0.07234, Accuracy = 98.85%: 100%|██████████| 140/140 [00:01<00:00, 82.30it/s]\n",
+      "[20 / 30]   Val: Loss = 0.20912, Accuracy = 98.27%: 100%|██████████| 4/4 [00:00<00:00, 61.54it/s]\n",
+      "[21 / 30] Train: Loss = 0.05854, Accuracy = 99.01%: 100%|██████████| 140/140 [00:01<00:00, 82.84it/s]\n",
+      "[21 / 30]   Val: Loss = 0.21018, Accuracy = 98.36%: 100%|██████████| 4/4 [00:00<00:00, 65.57it/s]\n",
+      "[22 / 30] Train: Loss = 0.05448, Accuracy = 99.13%: 100%|██████████| 140/140 [00:01<00:00, 82.89it/s]\n",
+      "[22 / 30]   Val: Loss = 0.21491, Accuracy = 98.39%: 100%|██████████| 4/4 [00:00<00:00, 65.58it/s]\n",
+      "[23 / 30] Train: Loss = 0.05112, Accuracy = 99.04%: 100%|██████████| 140/140 [00:01<00:00, 81.11it/s]\n",
+      "[23 / 30]   Val: Loss = 0.22093, Accuracy = 98.42%: 100%|██████████| 4/4 [00:00<00:00, 67.79it/s]\n",
+      "[24 / 30] Train: Loss = 0.04639, Accuracy = 99.20%: 100%|██████████| 140/140 [00:01<00:00, 83.14it/s]\n",
+      "[24 / 30]   Val: Loss = 0.22347, Accuracy = 98.29%: 100%|██████████| 4/4 [00:00<00:00, 65.57it/s]\n",
+      "[25 / 30] Train: Loss = 0.05285, Accuracy = 99.16%: 100%|██████████| 140/140 [00:01<00:00, 82.30it/s]\n",
+      "[25 / 30]   Val: Loss = 0.19744, Accuracy = 98.45%: 100%|██████████| 4/4 [00:00<00:00, 61.54it/s]\n",
+      "[26 / 30] Train: Loss = 0.04679, Accuracy = 99.17%: 100%|██████████| 140/140 [00:01<00:00, 81.25it/s]\n",
+      "[26 / 30]   Val: Loss = 0.21611, Accuracy = 98.31%: 100%|██████████| 4/4 [00:00<00:00, 64.52it/s]\n",
+      "[27 / 30] Train: Loss = 0.05425, Accuracy = 99.11%: 100%|██████████| 140/140 [00:01<00:00, 82.89it/s]\n",
+      "[27 / 30]   Val: Loss = 0.19564, Accuracy = 98.52%: 100%|██████████| 4/4 [00:00<00:00, 60.61it/s]\n",
+      "[28 / 30] Train: Loss = 0.04237, Accuracy = 99.22%: 100%|██████████| 140/140 [00:01<00:00, 82.21it/s]\n",
+      "[28 / 30]   Val: Loss = 0.19839, Accuracy = 98.50%: 100%|██████████| 4/4 [00:00<00:00, 62.50it/s]\n",
+      "[29 / 30] Train: Loss = 0.03758, Accuracy = 99.31%: 100%|██████████| 140/140 [00:01<00:00, 81.82it/s]\n",
+      "[29 / 30]   Val: Loss = 0.19863, Accuracy = 98.58%: 100%|██████████| 4/4 [00:00<00:00, 64.51it/s]\n",
+      "[30 / 30] Train: Loss = 0.03978, Accuracy = 99.30%: 100%|██████████| 140/140 [00:01<00:00, 81.59it/s]\n",
+      "[30 / 30]   Val: Loss = 0.20618, Accuracy = 98.48%: 100%|██████████| 4/4 [00:00<00:00, 58.82it/s]\n"
      ]
     }
    ],
    "source": [
-    "pad_idx = tags_field.vocab.stoi['<pad>']\n",
+    "tokens_pad_idx = tokens_field.vocab.stoi[tokens_field.pad_token]\n",
+    "tags_pad_idx = tags_field.vocab.stoi[tags_field.pad_token]\n",
     "\n",
-    "model = SharedModel(vocab_size=len(tokens_field.vocab), intents_count=len(intent_field.vocab), tags_count=len(tags_field.vocab), pad_idx = pad_idx).to(DEVICE)\n",
+    "model = SharedModel(vocab_size=len(tokens_field.vocab), intents_count=len(intent_field.vocab), tags_count=len(tags_field.vocab), pad_idx = tokens_pad_idx).to(DEVICE)\n",
     "\n",
-    "criterion_ignore_pad = nn.CrossEntropyLoss(ignore_index=pad_idx).to(DEVICE)\n",
+    "criterion_ignore_pad = nn.CrossEntropyLoss(ignore_index=tags_pad_idx).to(DEVICE)\n",
     "criterion = nn.CrossEntropyLoss().to(DEVICE)\n",
     "optimizer = optim.Adam(model.parameters())\n",
     "\n",
-    "trainer = ModelTrainer_Trigger(model, criterion, criterion_ignore_pad, optimizer, pad_idx)\n",
+    "trainer = ModelTrainer_Trigger(model, criterion, criterion_ignore_pad, optimizer, tags_pad_idx)\n",
     "\n",
     "fit(trainer, train_iter, epochs_count=30, val_iter=val_iter)\n"
    ]
@@ -348,7 +349,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Test: Loss = 0.34987, Accuracy = 97.56%: 100%|██████████| 7/7 [00:00<00:00, 71.41it/s]\n"
+      "Test: Loss = 0.33398, Accuracy = 97.50%: 100%|██████████| 7/7 [00:00<00:00, 71.43it/s]\n"
      ]
     }
    ],
@@ -360,15 +361,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision = 95.11%, Recall = 94.26%, F1 = 94.69%\n",
-      "Intent accuracy = 96.64%%\n"
+      "Precision = 94.79%, Recall = 93.67%, F1 = 94.23%\n",
+      "Intent accuracy = 96.53%%\n"
      ]
     }
    ],
@@ -376,6 +377,7 @@
     "from conlleval import evaluate\n",
     "\n",
     "def eval_tagger(model, test_iter):\n",
+    "    pad_idx = tags_field.vocab.stoi[tags_field.pad_token]\n",
     "    true_seqs, pred_seqs = [], []\n",
     "    correct_count, total_count = 0, 0\n",
     "\n",
@@ -393,16 +395,18 @@
     "            true = batch.tags.reshape((-1))\n",
     "            \n",
     "            max_preds = pred.argmax(dim = 1)\n",
-    "            non_pad_elements = (true != 0).nonzero()\n",
-    "            pred = list(map(lambda y: tags_field.vocab.itos[y], max_preds[non_pad_elements].reshape((-1))))\n",
+    "            non_pad_elements = (true != pad_idx).nonzero()\n",
     "            true = list(map(lambda y: tags_field.vocab.itos[y], true[non_pad_elements].reshape((-1))))\n",
+    "            pred = list(map(lambda y: tags_field.vocab.itos[y], max_preds[non_pad_elements].reshape((-1))))\n",
+    "            \n",
     "            \n",
     "            # print(true[200:220])\n",
     "            # print(pred[200:220])\n",
     "            # print()\n",
-    "            \n",
+    "        \n",
     "            pred = ' '.join(pred)\n",
     "            true = ' '.join(true)\n",
+    "        \n",
     "  \n",
     "            pred_seqs.append(pred)\n",
     "            true_seqs.append(true)\n",
