--- a/TokenTaggerModel.ipynb
+++ b/TokenTaggerModel.ipynb
@@ -22,24 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Study\\Dialogue_systems\\env\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,99 +247,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[1 / 30] Train: Loss = 1.54315, Accuracy = 71.26%: 100%|██████████| 140/140 [00:01<00:00, 74.55it/s]\n",
-      "[1 / 30]   Val: Loss = 0.82720, Accuracy = 81.87%: 100%|██████████| 4/4 [00:00<00:00, 61.54it/s]\n",
-      "[2 / 30] Train: Loss = 0.63450, Accuracy = 86.09%: 100%|██████████| 140/140 [00:01<00:00, 81.82it/s]\n",
-      "[2 / 30]   Val: Loss = 0.45834, Accuracy = 89.99%: 100%|██████████| 4/4 [00:00<00:00, 72.73it/s]\n",
-      "[3 / 30] Train: Loss = 0.38293, Accuracy = 91.46%: 100%|██████████| 140/140 [00:02<00:00, 64.37it/s]\n",
-      "[3 / 30]   Val: Loss = 0.29926, Accuracy = 93.06%: 100%|██████████| 4/4 [00:00<00:00, 38.10it/s]\n",
-      "[4 / 30] Train: Loss = 0.26553, Accuracy = 93.78%: 100%|██████████| 140/140 [00:02<00:00, 52.08it/s]\n",
-      "[4 / 30]   Val: Loss = 0.21841, Accuracy = 94.91%: 100%|██████████| 4/4 [00:00<00:00, 37.04it/s]\n",
-      "[5 / 30] Train: Loss = 0.19734, Accuracy = 95.37%: 100%|██████████| 140/140 [00:02<00:00, 52.45it/s]\n",
-      "[5 / 30]   Val: Loss = 0.17160, Accuracy = 95.93%: 100%|██████████| 4/4 [00:00<00:00, 37.88it/s]\n",
-      "[6 / 30] Train: Loss = 0.15212, Accuracy = 96.49%: 100%|██████████| 140/140 [00:02<00:00, 52.63it/s]\n",
-      "[6 / 30]   Val: Loss = 0.13974, Accuracy = 96.56%: 100%|██████████| 4/4 [00:00<00:00, 38.46it/s]\n",
-      "[7 / 30] Train: Loss = 0.12287, Accuracy = 97.15%: 100%|██████████| 140/140 [00:02<00:00, 52.22it/s]\n",
-      "[7 / 30]   Val: Loss = 0.11898, Accuracy = 97.16%: 100%|██████████| 4/4 [00:00<00:00, 36.36it/s]\n",
-      "[8 / 30] Train: Loss = 0.10149, Accuracy = 97.68%: 100%|██████████| 140/140 [00:02<00:00, 52.29it/s]\n",
-      "[8 / 30]   Val: Loss = 0.11090, Accuracy = 97.30%: 100%|██████████| 4/4 [00:00<00:00, 34.78it/s]\n",
-      "[9 / 30] Train: Loss = 0.08423, Accuracy = 98.05%: 100%|██████████| 140/140 [00:02<00:00, 52.25it/s]\n",
-      "[9 / 30]   Val: Loss = 0.08801, Accuracy = 97.97%: 100%|██████████| 4/4 [00:00<00:00, 38.46it/s]\n",
-      "[10 / 30] Train: Loss = 0.06923, Accuracy = 98.41%: 100%|██████████| 140/140 [00:02<00:00, 51.58it/s]\n",
-      "[10 / 30]   Val: Loss = 0.07836, Accuracy = 97.97%: 100%|██████████| 4/4 [00:00<00:00, 36.04it/s]\n",
-      "[11 / 30] Train: Loss = 0.05795, Accuracy = 98.63%: 100%|██████████| 140/140 [00:02<00:00, 52.29it/s]\n",
-      "[11 / 30]   Val: Loss = 0.07336, Accuracy = 98.21%: 100%|██████████| 4/4 [00:00<00:00, 37.39it/s]\n",
-      "[12 / 30] Train: Loss = 0.05112, Accuracy = 98.77%: 100%|██████████| 140/140 [00:02<00:00, 51.44it/s]\n",
-      "[12 / 30]   Val: Loss = 0.06753, Accuracy = 98.33%: 100%|██████████| 4/4 [00:00<00:00, 38.09it/s]\n",
-      "[13 / 30] Train: Loss = 0.04370, Accuracy = 98.98%: 100%|██████████| 140/140 [00:02<00:00, 52.18it/s]\n",
-      "[13 / 30]   Val: Loss = 0.06372, Accuracy = 98.35%: 100%|██████████| 4/4 [00:00<00:00, 35.40it/s]\n",
-      "[14 / 30] Train: Loss = 0.03792, Accuracy = 99.06%: 100%|██████████| 140/140 [00:02<00:00, 52.06it/s]\n",
-      "[14 / 30]   Val: Loss = 0.06823, Accuracy = 98.30%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
-      "[15 / 30] Train: Loss = 0.03379, Accuracy = 99.17%: 100%|██████████| 140/140 [00:02<00:00, 51.88it/s]\n",
-      "[15 / 30]   Val: Loss = 0.06400, Accuracy = 98.37%: 100%|██████████| 4/4 [00:00<00:00, 39.59it/s]\n",
-      "[16 / 30] Train: Loss = 0.02908, Accuracy = 99.29%: 100%|██████████| 140/140 [00:02<00:00, 51.90it/s]\n",
-      "[16 / 30]   Val: Loss = 0.05815, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 37.39it/s]\n",
-      "[17 / 30] Train: Loss = 0.02626, Accuracy = 99.34%: 100%|██████████| 140/140 [00:02<00:00, 51.86it/s]\n",
-      "[17 / 30]   Val: Loss = 0.05809, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 37.38it/s]\n",
-      "[18 / 30] Train: Loss = 0.02481, Accuracy = 99.39%: 100%|██████████| 140/140 [00:02<00:00, 51.97it/s]\n",
-      "[18 / 30]   Val: Loss = 0.05538, Accuracy = 98.81%: 100%|██████████| 4/4 [00:00<00:00, 36.04it/s]\n",
-      "[19 / 30] Train: Loss = 0.02098, Accuracy = 99.47%: 100%|██████████| 140/140 [00:02<00:00, 52.38it/s]\n",
-      "[19 / 30]   Val: Loss = 0.05566, Accuracy = 98.70%: 100%|██████████| 4/4 [00:00<00:00, 39.22it/s]\n",
-      "[20 / 30] Train: Loss = 0.01945, Accuracy = 99.52%: 100%|██████████| 140/140 [00:02<00:00, 51.93it/s]\n",
-      "[20 / 30]   Val: Loss = 0.05417, Accuracy = 98.70%: 100%|██████████| 4/4 [00:00<00:00, 36.69it/s]\n",
-      "[21 / 30] Train: Loss = 0.01738, Accuracy = 99.54%: 100%|██████████| 140/140 [00:02<00:00, 51.93it/s]\n",
-      "[21 / 30]   Val: Loss = 0.05199, Accuracy = 98.81%: 100%|██████████| 4/4 [00:00<00:00, 35.71it/s]\n",
-      "[22 / 30] Train: Loss = 0.01570, Accuracy = 99.61%: 100%|██████████| 140/140 [00:02<00:00, 51.08it/s]\n",
-      "[22 / 30]   Val: Loss = 0.05416, Accuracy = 98.70%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
-      "[23 / 30] Train: Loss = 0.01327, Accuracy = 99.67%: 100%|██████████| 140/140 [00:02<00:00, 52.45it/s]\n",
-      "[23 / 30]   Val: Loss = 0.05253, Accuracy = 98.90%: 100%|██████████| 4/4 [00:00<00:00, 40.82it/s]\n",
-      "[24 / 30] Train: Loss = 0.01184, Accuracy = 99.74%: 100%|██████████| 140/140 [00:02<00:00, 51.88it/s]\n",
-      "[24 / 30]   Val: Loss = 0.05137, Accuracy = 99.04%: 100%|██████████| 4/4 [00:00<00:00, 36.69it/s]\n",
-      "[25 / 30] Train: Loss = 0.01198, Accuracy = 99.71%: 100%|██████████| 140/140 [00:02<00:00, 51.66it/s]\n",
-      "[25 / 30]   Val: Loss = 0.05105, Accuracy = 98.95%: 100%|██████████| 4/4 [00:00<00:00, 37.38it/s]\n",
-      "[26 / 30] Train: Loss = 0.01082, Accuracy = 99.74%: 100%|██████████| 140/140 [00:02<00:00, 51.97it/s]\n",
-      "[26 / 30]   Val: Loss = 0.05147, Accuracy = 98.93%: 100%|██████████| 4/4 [00:00<00:00, 37.04it/s]\n",
-      "[27 / 30] Train: Loss = 0.00972, Accuracy = 99.79%: 100%|██████████| 140/140 [00:02<00:00, 52.24it/s]\n",
-      "[27 / 30]   Val: Loss = 0.05577, Accuracy = 98.79%: 100%|██████████| 4/4 [00:00<00:00, 38.84it/s]\n",
-      "[28 / 30] Train: Loss = 0.00964, Accuracy = 99.75%: 100%|██████████| 140/140 [00:02<00:00, 51.03it/s]\n",
-      "[28 / 30]   Val: Loss = 0.05287, Accuracy = 98.82%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
-      "[29 / 30] Train: Loss = 0.00956, Accuracy = 99.76%: 100%|██████████| 140/140 [00:02<00:00, 51.39it/s]\n",
-      "[29 / 30]   Val: Loss = 0.05277, Accuracy = 98.97%: 100%|██████████| 4/4 [00:00<00:00, 39.60it/s]\n",
-      "[30 / 30] Train: Loss = 0.00805, Accuracy = 99.80%: 100%|██████████| 140/140 [00:02<00:00, 51.30it/s]\n",
-      "[30 / 30]   Val: Loss = 0.05069, Accuracy = 99.09%: 100%|██████████| 4/4 [00:00<00:00, 38.09it/s]\n"
+      "[1 / 30] Train: Loss = 1.57173, Accuracy = 70.71%: 100%|██████████| 140/140 [00:02<00:00, 49.69it/s]\n",
+      "[1 / 30]   Val: Loss = 0.82024, Accuracy = 81.67%: 100%|██████████| 4/4 [00:00<00:00, 37.04it/s]\n",
+      "[2 / 30] Train: Loss = 0.59988, Accuracy = 87.15%: 100%|██████████| 140/140 [00:02<00:00, 50.78it/s]\n",
+      "[2 / 30]   Val: Loss = 0.41893, Accuracy = 90.65%: 100%|██████████| 4/4 [00:00<00:00, 37.74it/s]\n",
+      "[3 / 30] Train: Loss = 0.34554, Accuracy = 92.17%: 100%|██████████| 140/140 [00:02<00:00, 50.78it/s]\n",
+      "[3 / 30]   Val: Loss = 0.27018, Accuracy = 93.76%: 100%|██████████| 4/4 [00:00<00:00, 38.47it/s]\n",
+      "[4 / 30] Train: Loss = 0.23770, Accuracy = 94.45%: 100%|██████████| 140/140 [00:02<00:00, 50.13it/s]\n",
+      "[4 / 30]   Val: Loss = 0.19522, Accuracy = 95.25%: 100%|██████████| 4/4 [00:00<00:00, 36.70it/s]\n",
+      "[5 / 30] Train: Loss = 0.17491, Accuracy = 95.94%: 100%|██████████| 140/140 [00:02<00:00, 50.78it/s]\n",
+      "[5 / 30]   Val: Loss = 0.15624, Accuracy = 96.07%: 100%|██████████| 4/4 [00:00<00:00, 36.36it/s]\n",
+      "[6 / 30] Train: Loss = 0.13369, Accuracy = 96.89%: 100%|██████████| 140/140 [00:02<00:00, 51.99it/s]\n",
+      "[6 / 30]   Val: Loss = 0.12646, Accuracy = 96.76%: 100%|██████████| 4/4 [00:00<00:00, 38.45it/s]\n",
+      "[7 / 30] Train: Loss = 0.10530, Accuracy = 97.54%: 100%|██████████| 140/140 [00:02<00:00, 51.49it/s]\n",
+      "[7 / 30]   Val: Loss = 0.10914, Accuracy = 97.44%: 100%|██████████| 4/4 [00:00<00:00, 30.08it/s]\n",
+      "[8 / 30] Train: Loss = 0.08893, Accuracy = 97.92%: 100%|██████████| 140/140 [00:02<00:00, 51.40it/s]\n",
+      "[8 / 30]   Val: Loss = 0.09540, Accuracy = 97.81%: 100%|██████████| 4/4 [00:00<00:00, 37.38it/s]\n",
+      "[9 / 30] Train: Loss = 0.07196, Accuracy = 98.33%: 100%|██████████| 140/140 [00:02<00:00, 50.80it/s]\n",
+      "[9 / 30]   Val: Loss = 0.08623, Accuracy = 98.00%: 100%|██████████| 4/4 [00:00<00:00, 38.46it/s]\n",
+      "[10 / 30] Train: Loss = 0.05988, Accuracy = 98.58%: 100%|██████████| 140/140 [00:02<00:00, 51.76it/s]\n",
+      "[10 / 30]   Val: Loss = 0.07483, Accuracy = 98.30%: 100%|██████████| 4/4 [00:00<00:00, 36.69it/s]\n",
+      "[11 / 30] Train: Loss = 0.04987, Accuracy = 98.84%: 100%|██████████| 140/140 [00:02<00:00, 50.61it/s]\n",
+      "[11 / 30]   Val: Loss = 0.07432, Accuracy = 98.11%: 100%|██████████| 4/4 [00:00<00:00, 37.38it/s]\n",
+      "[12 / 30] Train: Loss = 0.04179, Accuracy = 98.93%: 100%|██████████| 140/140 [00:02<00:00, 52.53it/s]\n",
+      "[12 / 30]   Val: Loss = 0.06667, Accuracy = 98.46%: 100%|██████████| 4/4 [00:00<00:00, 38.46it/s]\n",
+      "[13 / 30] Train: Loss = 0.03703, Accuracy = 99.11%: 100%|██████████| 140/140 [00:02<00:00, 49.75it/s]\n",
+      "[13 / 30]   Val: Loss = 0.06437, Accuracy = 98.51%: 100%|██████████| 4/4 [00:00<00:00, 37.73it/s]\n",
+      "[14 / 30] Train: Loss = 0.03060, Accuracy = 99.25%: 100%|██████████| 140/140 [00:02<00:00, 52.67it/s]\n",
+      "[14 / 30]   Val: Loss = 0.06307, Accuracy = 98.58%: 100%|██████████| 4/4 [00:00<00:00, 34.48it/s]\n",
+      "[15 / 30] Train: Loss = 0.02759, Accuracy = 99.35%: 100%|██████████| 140/140 [00:02<00:00, 48.31it/s]\n",
+      "[15 / 30]   Val: Loss = 0.06604, Accuracy = 98.47%: 100%|██████████| 4/4 [00:00<00:00, 40.00it/s]\n",
+      "[16 / 30] Train: Loss = 0.02302, Accuracy = 99.44%: 100%|██████████| 140/140 [00:02<00:00, 51.72it/s]\n",
+      "[16 / 30]   Val: Loss = 0.06220, Accuracy = 98.58%: 100%|██████████| 4/4 [00:00<00:00, 37.38it/s]\n",
+      "[17 / 30] Train: Loss = 0.02140, Accuracy = 99.46%: 100%|██████████| 140/140 [00:02<00:00, 49.72it/s]\n",
+      "[17 / 30]   Val: Loss = 0.06263, Accuracy = 98.54%: 100%|██████████| 4/4 [00:00<00:00, 38.84it/s]\n",
+      "[18 / 30] Train: Loss = 0.01973, Accuracy = 99.48%: 100%|██████████| 140/140 [00:02<00:00, 51.17it/s]\n",
+      "[18 / 30]   Val: Loss = 0.05831, Accuracy = 98.72%: 100%|██████████| 4/4 [00:00<00:00, 36.36it/s]\n",
+      "[19 / 30] Train: Loss = 0.01550, Accuracy = 99.65%: 100%|██████████| 140/140 [00:02<00:00, 52.71it/s]\n",
+      "[19 / 30]   Val: Loss = 0.05627, Accuracy = 98.70%: 100%|██████████| 4/4 [00:00<00:00, 35.71it/s]\n",
+      "[20 / 30] Train: Loss = 0.01626, Accuracy = 99.56%: 100%|██████████| 140/140 [00:02<00:00, 52.12it/s]\n",
+      "[20 / 30]   Val: Loss = 0.05975, Accuracy = 98.60%: 100%|██████████| 4/4 [00:00<00:00, 41.67it/s]\n",
+      "[21 / 30] Train: Loss = 0.01387, Accuracy = 99.65%: 100%|██████████| 140/140 [00:02<00:00, 52.40it/s]\n",
+      "[21 / 30]   Val: Loss = 0.05920, Accuracy = 98.61%: 100%|██████████| 4/4 [00:00<00:00, 41.67it/s]\n",
+      "[22 / 30] Train: Loss = 0.01213, Accuracy = 99.70%: 100%|██████████| 140/140 [00:02<00:00, 52.43it/s]\n",
+      "[22 / 30]   Val: Loss = 0.05987, Accuracy = 98.75%: 100%|██████████| 4/4 [00:00<00:00, 43.48it/s]\n",
+      "[23 / 30] Train: Loss = 0.01113, Accuracy = 99.71%: 100%|██████████| 140/140 [00:02<00:00, 53.74it/s]\n",
+      "[23 / 30]   Val: Loss = 0.06086, Accuracy = 98.67%: 100%|██████████| 4/4 [00:00<00:00, 44.44it/s]\n",
+      "[24 / 30] Train: Loss = 0.01053, Accuracy = 99.74%: 100%|██████████| 140/140 [00:02<00:00, 55.04it/s]\n",
+      "[24 / 30]   Val: Loss = 0.05781, Accuracy = 98.84%: 100%|██████████| 4/4 [00:00<00:00, 41.67it/s]\n",
+      "[25 / 30] Train: Loss = 0.01017, Accuracy = 99.75%: 100%|██████████| 140/140 [00:02<00:00, 52.69it/s]\n",
+      "[25 / 30]   Val: Loss = 0.05936, Accuracy = 98.70%: 100%|██████████| 4/4 [00:00<00:00, 41.24it/s]\n",
+      "[26 / 30] Train: Loss = 0.00871, Accuracy = 99.78%: 100%|██████████| 140/140 [00:02<00:00, 50.05it/s]\n",
+      "[26 / 30]   Val: Loss = 0.05878, Accuracy = 98.70%: 100%|██████████| 4/4 [00:00<00:00, 33.33it/s]\n",
+      "[27 / 30] Train: Loss = 0.00752, Accuracy = 99.82%: 100%|██████████| 140/140 [00:02<00:00, 51.57it/s]\n",
+      "[27 / 30]   Val: Loss = 0.06257, Accuracy = 98.67%: 100%|██████████| 4/4 [00:00<00:00, 40.40it/s]\n",
+      "[28 / 30] Train: Loss = 0.00757, Accuracy = 99.83%: 100%|██████████| 140/140 [00:02<00:00, 50.07it/s]\n",
+      "[28 / 30]   Val: Loss = 0.06094, Accuracy = 98.74%: 100%|██████████| 4/4 [00:00<00:00, 40.82it/s]\n",
+      "[29 / 30] Train: Loss = 0.00739, Accuracy = 99.82%: 100%|██████████| 140/140 [00:02<00:00, 49.59it/s]\n",
+      "[29 / 30]   Val: Loss = 0.06275, Accuracy = 98.82%: 100%|██████████| 4/4 [00:00<00:00, 41.24it/s]\n",
+      "[30 / 30] Train: Loss = 0.00755, Accuracy = 99.80%: 100%|██████████| 140/140 [00:02<00:00, 49.63it/s]\n",
+      "[30 / 30]   Val: Loss = 0.05831, Accuracy = 98.81%: 100%|██████████| 4/4 [00:00<00:00, 38.46it/s]\n"
      ]
     }
    ],
    "source": [
-    "pad_idx = tags_field.vocab.stoi['<pad>']\n",
+    "tokens_pad_idx = tokens_field.vocab.stoi[tokens_field.pad_token]\n",
+    "tags_pad_idx = tags_field.vocab.stoi[tags_field.pad_token]\n",
     "\n",
-    "model = TokenTaggerModel(vocab_size=len(tokens_field.vocab), tags_count=len(tags_field.vocab), pad_idx = pad_idx).to(DEVICE)\n",
+    "model = TokenTaggerModel(vocab_size=len(tokens_field.vocab), tags_count=len(tags_field.vocab), pad_idx = tokens_pad_idx).to(DEVICE)\n",
     "\n",
-    "criterion = nn.CrossEntropyLoss(ignore_index = pad_idx).to(DEVICE)\n",
+    "criterion = nn.CrossEntropyLoss(ignore_index = tags_pad_idx).to(DEVICE)\n",
     "optimizer = optim.Adam(model.parameters())\n",
     "\n",
-    "trainer = ModelTrainer_Trigger(model, criterion, optimizer, pad_idx)\n",
+    "trainer = ModelTrainer_Trigger(model, criterion, optimizer, tags_pad_idx)\n",
     "\n",
     "fit(trainer, train_iter, epochs_count=30, val_iter=val_iter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Test: Loss = 0.14732, Accuracy = 97.78%: 100%|██████████| 7/7 [00:00<00:00, 33.18it/s]\n"
+      "Test: Loss = 0.13111, Accuracy = 97.93%: 100%|██████████| 7/7 [00:00<00:00, 28.34it/s]\n"
      ]
     }
    ],
@@ -359,14 +352,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision = 95.18%, Recall = 94.57%, F1 = 94.88%\n"
+      "Precision = 95.28%, Recall = 94.51%, F1 = 94.89%\n"
      ]
     }
    ],
@@ -374,6 +367,7 @@
     "from conlleval import evaluate\n",
     "\n",
     "def eval_tagger(model, test_iter):\n",
+    "    pad_idx = tags_field.vocab.stoi[tags_field.pad_token]\n",
     "    true_seqs, pred_seqs = [], []\n",
     "\n",
     "    model.eval()\n",
@@ -385,9 +379,9 @@
     "            true = batch.tags.reshape((-1))\n",
     "            \n",
     "            max_preds = pred.argmax(dim = 1)\n",
-    "            non_pad_elements = (true != 0).nonzero()\n",
-    "            pred = list(map(lambda y: tags_field.vocab.itos[y], max_preds[non_pad_elements].reshape((-1))))\n",
+    "            non_pad_elements = (true != pad_idx).nonzero()\n",
     "            true = list(map(lambda y: tags_field.vocab.itos[y], true[non_pad_elements].reshape((-1))))\n",
+    "            pred = list(map(lambda y: tags_field.vocab.itos[y], max_preds[non_pad_elements].reshape((-1))))\n",
     "            pred = ' '.join(pred)\n",
     "            true = ' '.join(true)\n",
     "  \n",
